--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -138,6 +138,10 @@
     "defaultMessage": "Please connect to the internet.",
     "description": "offline message"
   },
+  "4o5Hlu": {
+    "defaultMessage": "Your name will be shown here",
+    "description": "name fallback message"
+  },
   "52hsYP": {
     "defaultMessage": "#{rank}",
     "description": "Rank"
@@ -181,6 +185,10 @@
     "defaultMessage": "Login to existing Account",
     "description": "Login to existing account button"
   },
+  "7AMmxp": {
+    "defaultMessage": "Your bio will be shown here",
+    "description": "about fallback message"
+  },
   "7L3+7M": {
     "defaultMessage": "Login into existing account",
     "description": "Login into existing account button"
@@ -204,6 +212,10 @@
   "9GHKZe": {
     "defaultMessage": "/{totalQns}",
     "description": "Game Leader Board: Total Questions"
+  },
+  "9K8jZr": {
+    "defaultMessage": "{idx}. {hint}",
+    "description": "Hint"
   },
   "9NID4X": {
     "defaultMessage": "OK",
@@ -269,6 +281,10 @@
     "defaultMessage": "completed",
     "description": "Game progress"
   },
+  "CLW1pi": {
+    "defaultMessage": "Close",
+    "description": "success modal closed"
+  },
   "CabaPs": {
     "defaultMessage": "Level {level}",
     "description": "Level 1 navigation link"
@@ -312,6 +328,10 @@
   "EqEa5m": {
     "defaultMessage": "Later",
     "description": "Later button"
+  },
+  "EyxxGO": {
+    "defaultMessage": "Hint:",
+    "description": "Hint title"
   },
   "F/vOH1": {
     "defaultMessage": "Forgot Password",
