--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,6 +23,14 @@
     "defaultMessage": "Yes",
     "description": "logout"
   },
+  "/O26Yc": {
+    "defaultMessage": "{line}",
+    "description": "console line"
+  },
+  "/Urdq7": {
+    "defaultMessage": "{name}",
+    "description": "rank holder name"
+  },
   "/dnxym": {
     "defaultMessage": "Create a New Account",
     "description": "create new account button"
@@ -138,6 +146,10 @@
     "defaultMessage": "Login with Phone",
     "description": "Login with Phone tab"
   },
+  "30ejkF": {
+    "defaultMessage": "Close",
+    "description": "close"
+  },
   "33dFbN": {
     "defaultMessage": "Created \"{lastCreatedChallengeName}\" challenge",
     "description": "last created challenge log"
@@ -161,6 +173,14 @@
     "defaultMessage": "Oh ho ho.. Requirement not satisfied",
     "description": "modal title"
   },
+  "4+tKRC": {
+    "defaultMessage": "Yes",
+    "description": "Keep Changes button text"
+  },
+  "48yQvt": {
+    "defaultMessage": "{activeSortName}",
+    "description": "sort button text"
+  },
   "4Ve1r3": {
     "defaultMessage": "Ok",
     "description": "confirm btn"
@@ -172,6 +192,10 @@
   "4o5Hlu": {
     "defaultMessage": "Your name will be shown here",
     "description": "name fallback message"
+  },
+  "4wgAGs": {
+    "defaultMessage": "Date",
+    "description": "sort dropdown button text"
   },
   "52hsYP": {
     "defaultMessage": "#{rank}",
@@ -188,6 +212,14 @@
   "5L6FVQ": {
     "defaultMessage": "Password",
     "description": "Password Field"
+  },
+  "5Ls4nU": {
+    "defaultMessage": "Publish",
+    "description": "publish challenge button text"
+  },
+  "5Vj22e": {
+    "defaultMessage": "{swiperHeading}",
+    "description": "swiper heading"
   },
   "5jxN1p": {
     "defaultMessage": "{points}",
@@ -216,6 +248,10 @@
     "defaultMessage": "Login to existing Account",
     "description": "Login to existing account button"
   },
+  "76OIt3": {
+    "defaultMessage": "Show Leaderboard",
+    "description": "show leaderboard btn"
+  },
   "7AMmxp": {
     "defaultMessage": "Your bio will be shown here",
     "description": "about fallback message"
@@ -240,17 +276,13 @@
     "defaultMessage": "Output will appear here",
     "description": "output placeholder"
   },
-  "9+2Mm0": {
-    "defaultMessage": "IDE",
-    "description": "page title"
-  },
-  "9BVOVU": {
-    "defaultMessage": "Please verify to continue",
-    "description": "Recaptcha Modal heading"
-  },
   "8cISRy": {
     "defaultMessage": "Time Spent:",
     "description": "Time spent title"
+  },
+  "9+2Mm0": {
+    "defaultMessage": "IDE",
+    "description": "page title"
   },
   "9BVOVU": {
     "defaultMessage": "Please verify to continue",
@@ -271,6 +303,10 @@
   "9QOtTR": {
     "defaultMessage": "{step}",
     "description": "zombieLand instruction"
+  },
+  "9TkiF9": {
+    "defaultMessage": "{languageTabName}",
+    "description": "tab button text"
   },
   "9YoD+Y": {
     "defaultMessage": "New Password",
@@ -340,6 +376,10 @@
     "defaultMessage": "completed",
     "description": "Game progress"
   },
+  "BwliRZ": {
+    "defaultMessage": "Newest to Oldest",
+    "description": "sort dropdown button text"
+  },
   "CLW1pi": {
     "defaultMessage": "Close",
     "description": "success modal closed"
@@ -351,10 +391,6 @@
   "CcB4fo": {
     "defaultMessage": "Coins Earned:",
     "description": "Coins Earned"
-  },
-  "CfsqV9": {
-    "defaultMessage": "All Games",
-    "description": "Games Page"
   },
   "Ciol6I": {
     "defaultMessage": "Output",
@@ -412,6 +448,14 @@
     "defaultMessage": "Add a block",
     "description": "Add a block title"
   },
+  "Fbud0n": {
+    "defaultMessage": "{problemStatement}",
+    "description": "problem statement"
+  },
+  "FhNWty": {
+    "defaultMessage": "Publish",
+    "description": "publish challenge button"
+  },
   "FhTUgw": {
     "defaultMessage": "Not {phone} ?",
     "description": "not button"
@@ -423,6 +467,10 @@
   "FoTGQE": {
     "defaultMessage": "Go to Login",
     "description": "Go to login button"
+  },
+  "Fr6aaO": {
+    "defaultMessage": "No",
+    "description": "Do not keep changes"
   },
   "Fy9oMx": {
     "defaultMessage": "for",
@@ -443,6 +491,14 @@
   "Game Title": {
     "defaultMessage": "ZombieLand"
   },
+  "GhmnMb": {
+    "defaultMessage": "Private Test Case {testCaseNumber} - {result}",
+    "description": "test case result text"
+  },
+  "Gmgyiq": {
+    "defaultMessage": "Move to drafts",
+    "description": "move to drafts button text"
+  },
   "Gon8SN": {
     "defaultMessage": "Login with Email",
     "description": "Login with email tab"
@@ -457,6 +513,10 @@
   "HI8bPV": {
     "defaultMessage": "Save",
     "description": "Profile save button"
+  },
+  "HTfYYv": {
+    "defaultMessage": "Play next",
+    "description": "Play next"
   },
   "HZrPcB": {
     "defaultMessage": "Validated Result",
@@ -522,6 +582,18 @@
     "defaultMessage": "Share",
     "description": "Share Button"
   },
+  "LbCDj2": {
+    "defaultMessage": "Move to Drafts",
+    "description": "move to drafts button"
+  },
+  "LdJ4cq": {
+    "defaultMessage": "{gameTitle}",
+    "description": "game title"
+  },
+  "LoAPT7": {
+    "defaultMessage": "Live Preview",
+    "description": "Live preview tab"
+  },
   "LuPT86": {
     "defaultMessage": "Coins",
     "description": "LeaderBoard Points"
@@ -537,6 +609,14 @@
   "MfoF60": {
     "defaultMessage": "{hint}",
     "description": "Hint"
+  },
+  "Mh1d7/": {
+    "defaultMessage": "Loading...",
+    "description": "more info btn"
+  },
+  "Mp8KyV": {
+    "defaultMessage": "Trending",
+    "description": "sort dropdown button text"
   },
   "NRDu9u": {
     "defaultMessage": "Add a block",
@@ -573,6 +653,10 @@
   "Nn5oAD": {
     "defaultMessage": "Go to login",
     "description": "Go to login button"
+  },
+  "NsygW3": {
+    "defaultMessage": "Run",
+    "description": "Run code button"
   },
   "NtU1FI": {
     "defaultMessage": "Problem Statement",
@@ -675,6 +759,14 @@
   "RjBfJa": {
     "defaultMessage": "range",
     "description": "range"
+  },
+  "S7XoqJ": {
+    "defaultMessage": "PLAY",
+    "description": "play btn text"
+  },
+  "SI6+pb": {
+    "defaultMessage": "Problem Statement",
+    "description": "problem statement label"
   },
   "SL6O2c": {
     "defaultMessage": "Password",
@@ -939,6 +1031,10 @@
     "defaultMessage": "...",
     "description": "Page"
   },
+  "d9u+8x": {
+    "defaultMessage": "Webkata - {concept}",
+    "description": "Game Title"
+  },
   "dNWhFj": {
     "defaultMessage": "No",
     "description": "logout no btn"
@@ -1009,6 +1105,10 @@
   "gOkIvb": {
     "defaultMessage": "Name",
     "description": "Name label"
+  },
+  "gPWy9r": {
+    "defaultMessage": "{gameTitle}",
+    "description": "Game Title"
   },
   "gTzQSp": {
     "defaultMessage": "moveUp",
@@ -1170,10 +1270,6 @@
     "defaultMessage": "Account Settings",
     "description": "more menu button"
   },
-  "oDenEU": {
-    "defaultMessage": "Turtle",
-    "description": "Turtle Game Title"
-  },
   "oOZkkL": {
     "defaultMessage": "Coming Soon...",
     "description": "Class Page"
@@ -1189,6 +1285,14 @@
   "pVIk7O": {
     "defaultMessage": "Turtle",
     "description": "Turtle title"
+  },
+  "pgAgVI": {
+    "defaultMessage": "{emptyStateText}",
+    "description": "no challenges"
+  },
+  "pl4ED2": {
+    "defaultMessage": "Continue Playing",
+    "description": "Continue playing heading"
   },
   "pmy91K": {
     "defaultMessage": "{coins} coins",
@@ -1206,9 +1310,17 @@
     "defaultMessage": "moveRight",
     "description": "moveRight function"
   },
+  "qJ7EK+": {
+    "defaultMessage": "{challengeName}",
+    "description": "modal title"
+  },
   "qTQ8nP": {
     "defaultMessage": "{coinsEarned}",
     "description": "Coins Earned"
+  },
+  "qTebrI": {
+    "defaultMessage": "Problem Statement",
+    "description": "button text"
   },
   "qUU2pp": {
     "defaultMessage": "All Games",
@@ -1221,6 +1333,10 @@
     "defaultMessage": "i",
     "description": "i"
   },
+  "qs67OI": {
+    "defaultMessage": "Problem Statement:",
+    "description": "problem statement label"
+  },
   "quRCCv": {
     "defaultMessage": "Phone",
     "description": "Phone label"
@@ -1232,6 +1348,10 @@
   "rZKLPy": {
     "defaultMessage": "Copy Link",
     "description": "Copy Link button"
+  },
+  "sC1GR3": {
+    "defaultMessage": "Yes",
+    "description": "yes button text"
   },
   "sI7zqJ": {
     "defaultMessage": "{message}",
