--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -115,6 +115,10 @@
     "defaultMessage": "Continue",
     "description": "Output tab"
   },
+  "2RoU+R": {
+    "defaultMessage": "{countryName}",
+    "description": "country name"
+  },
   "2Tu0HO": {
     "defaultMessage": "Next",
     "description": "next page button"
@@ -1286,10 +1290,6 @@
   "ySOrrv": {
     "defaultMessage": "No feed to show",
     "description": "No feed to show"
-  },
-  "ybULra": {
-    "defaultMessage": "Country",
-    "description": "country name label"
   },
   "yjWbPf": {
     "defaultMessage": "Visit Club",
